# pldag

./: .gitignore  Polyhedron.md  Propagate.md  README.md  pyproject.toml
docs/: MALS.md  Propagate.md
pldag/: __init__.py
pldag/solver/: __init__.py  default_solver.py  glpk_solver.py
tests/: test_pldag.py
