[tool.poetry]
name = "pldag"
version = "0.6.4"
description = ""
authors = ["znittzel <rikard@ourstudio.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"

[tool.poetry.extras]
glpk = ["npycvx"]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
hypothesis = "^6.100.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
